[package]
name = "reaction_bot"
version = "0.0.1"
authors = [ "Andrew Cerkin <cerkin-3@yandex.ru>" ]

[dependencies]
# rustls = "0.23.12"
# openssl-sys = "=0.7.17"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.55"
reqwest = { version = "0.11", features = ["json"] }
sqlx = { version = "0.7.3", optional = false, default-features = false, features = [
    "macros",
    "sqlite",
] }
teloxide = { version = "0.13", features = ["macros", "ctrlc_handler", "rustls", "sqlite-storage-rustls", "webhooks", "webhooks-axum"], default-features = false  }
log = "0.4"
chrono = "0.4"

dotenv = "0.15.0"
pretty_env_logger = "0.5"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
# [dependencies.openssl]
# version = "0.10.29"
# features = [
#     "vendored"
# ]

[dev-dependencies]
teloxide_tests = "0.2.0"

# [profile.release]
# lto = "off"