[package]
name = "video_saver_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.12", features = ["macros" ] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process"] }
log = "0.4"
pretty_env_logger = "0.5"
once_cell = "1" # Used for a simple in-memory store
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

dotenv = "0.15.0"
sqlx = { version = "0.7.3", optional = false, default-features = false, features = [
    "macros",
    "sqlite",
    "runtime-tokio"
] }

tempfile = "3.8"
image = "0.24"
imageproc = "0.23"